# AnOtherAutomationServer

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  DebianPackages.txt  README.md  TODO.md  build.sh  buildFlutter.sh
Documents/: Links.txt
Ide/: IoBackend.code-workspace
cmake/: FindLibmosquitto.cmake  Findmosquitto.cmake
dependencies/: CMakeLists.txt
documents/: Konzept.md  Links.txt  TestingHints.md  VierRelaiskarte.md
documents/Andere Projekte/: Frontend.py  Infos.txt
documents/Dokumentation/: DatabaseSchema.md  Docker.md  ESPHome.md  Index.md  InstallPI.md  Konzept.md  Mosquitto.md  Node.md  SoftwareApi.md  Tasmota.md  ZeroConf.md
src/: CMakeLists.txt
src/Arduino/SimpleClient/src/: main.cpp
src/Frontend/automation_ui/: README.md  l10n.yaml  pubspec.yaml
src/Frontend/automation_ui/android/app/: build.gradle
src/Frontend/automation_ui/android/app/src/main/: AndroidManifest.xml
src/Frontend/automation_ui/android/app/src/main/kotlin/com/example/automation_ui/: MainActivity.kt
src/Frontend/automation_ui/android/app/src/profile/: AndroidManifest.xml
src/Frontend/automation_ui/ios/Runner/: Info.plist
src/Frontend/automation_ui/ios/Runner.xcodeproj/: project.pbxproj
src/Frontend/automation_ui/lib/: main.dart  theme_provider.dart
src/Frontend/automation_ui/lib/bloc/: login_bloc.dart  login_event.dart  login_state.dart
src/Frontend/automation_ui/lib/component/bootstrap/: bootstrap.dart  bootstrap_controller.dart  bootstrap_state.dart  bootstrap_step.dart  ui_bootstrap.dart
src/Frontend/automation_ui/lib/component/bootstrap/bootSteps/: login_boot_step.dart
src/Frontend/automation_ui/lib/component/widget/: automation_form.dart  color_selector.dart  login_form.dart  panels.dart  settings_form.dart  theme_color_selector.dart
src/Frontend/automation_ui/lib/core/: audioplayer.dart  automation_panel_controller.dart  client_helper.dart  extensions.dart  router.dart
src/Frontend/automation_ui/lib/l10n/: app_de.arb  app_en.arb
src/Frontend/automation_ui/lib/models/: chat_message_model.dart  panel_page_changed.dart  panel_value_model.dart
src/Frontend/automation_ui/lib/screens/: cors_help.dart  dashboard.dart  login.dart
src/Frontend/automation_ui/lib/server/: client.dart  cookie_save.dart  home_server_endpoints.dart  message_stream.dart  user_settings.dart
src/Frontend/automation_ui/lib/server/data/: auto_destination.dart
src/Frontend/automation_ui/lib/server/http/: api_http_client.dart  http_app.dart  http_exceptions.dart  http_stub.dart  http_web.dart  websocket_client_null.dart  websocket_client_server.dart  websocket_client_stup.dart  websocket_client_web.dart
src/Frontend/automation_ui/linux/: CMakeLists.txt  my_application.cc
src/Frontend/automation_ui/macos/Flutter/: GeneratedPluginRegistrant.swift
src/Frontend/automation_ui/macos/Runner.xcodeproj/: project.pbxproj
src/Frontend/automation_ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
src/Frontend/automation_ui/macos/Runner/Configs/: AppInfo.xcconfig
src/Frontend/automation_ui/test/: widget_test.dart
src/Frontend/automation_ui/web/: index.html  manifest.json
src/Frontend/automation_ui/windows/: CMakeLists.txt
src/Frontend/automation_ui/windows/runner/: Runner.rc  main.cpp
src/IoBackend/: Backend.cpp  Backend.hpp  CMakeLists.txt  Config.cpp  Config.hpp  GlobalFunctions.cpp  GlobalFunctions.hpp  GlobalTypes.cpp  GlobalTypes.hpp  loggerIoBackend.conf  main.cpp
src/IoBackend/Dtos/: AutomationElement.cpp  AutomationElement.hpp  AutomationPage.cpp  AutomationPage.hpp  CurrentUserData.cpp  CurrentUserData.hpp
src/IoBackend/Mqtt/: MqttConnector.cpp  MqttConnector.h
src/IoBackend/Protocols/: ControlerSerialProtocol.cpp  ControlerSerialProtocol.hpp  NewLineSerial.cpp  NewLineSerial.hpp  SendHttp.cpp  SendHttp.hpp  SerialBase.cpp  SerialBase.hpp
src/IoBackend/Protocols/ESPHome/: ESPHomeNativApi.cpp  ESPHomeNativApi.hpp  api.proto  api_options.proto
src/IoBackend/Protocols/NMEA/: GPRMCDecoder.cpp  GPRMCDecoder.hpp  NMEADecoderBase.cpp  NMEADecoderBase.hpp  NMEAReader.cpp  NMEAReader.hpp
src/IoBackend/Protocols/ZeroConf/: mDnsClient.cpp  mDnsClient.hpp
src/IoBackend/PythonRunner/: PythonConnector.cpp  PythonConnector.hpp  PythonRunner.cpp  PythonRunner.hpp  sample.py
src/IoBackend/ServiceEvents/: ServiceEventManager.cpp  ServiceEventManager.hpp
src/IoBackend/SystemFunktions/: GPIOManager.cpp  GPIOManager.hpp  I2CManager.cpp  I2CManager.hpp  IODeviceManager.cpp  IODeviceManager.hpp  NetworkManager.cpp  NetworkManager.hpp
src/IoBackend/WebServer/: HttpRequest.cpp  HttpRequest.hpp  HttpResource.hpp  HttpResponse.cpp  HttpResponse.hpp  WebServer.cpp  WebServer.hpp  WebSocketProtokoll.cpp  WebSocketProtokoll.hpp
src/IoBackend/html/: index.html
src/IoBackend/resources/: ApiResource.cpp  ApiResource.hpp  AuthResource.cpp  AuthResource.hpp  AutomationResource.cpp  AutomationResource.hpp  ConfigResource.cpp  ConfigResource.hpp  HtmlPageResource.cpp  HtmlPageResource.hpp  MqttResource.cpp  MqttResource.h  MqttResource.hpp  TestResource.cpp  TestResource.hpp
src/IoBackend/webpage/: 404.html  blockypage.html  index.html
src/IoBackend/webpage/scripts/: websocket.js
src/common/: CMakeLists.txt  version.hpp  version.hpp.in
src/common/database/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  SqliteException.cpp  SqliteException.h  Statement.cpp  Statement.h  TableField.cpp  TableField.h
src/common/easylogging/: CMakeLists.txt
src/common/exceptions/: CMakeLists.txt  NotImplementedException.cpp  NotImplementedException.h
src/common/utils/: CMakeLists.txt  CommandLineArgs.cpp  Tokenizer.cpp  Tokenizer.h  commonutils.cpp  commonutils.h  waitingqueue.h
src/e-paper/: showvalue.py
tools/Blockly/: blockly-9.2.0.tgz
tools/scripts/: TransferBuild.sh
